EnterpriseFlowsRepository/api-definitions#7 Add bulk method !
